# telegramadmin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_debian.sh  update_debian.sh
app/: __init__.py  admin_registry.py  config.py  learning.py  main.py  rules.py
bot/: __init__.py  app_context.py  config.py  main.py
bot/database/: models.py  repositories.py  session.py
bot/handlers/: __init__.py  callback.py  commands.py  join_request.py  message.py  private_panel.py
bot/keyboards/: moderation.py  private_panel.py
bot/middlewares/: __init__.py  owner_guard.py
bot/schemas/: moderation.py  permissions.py
bot/services/: admin_sync.py  audit_export.py  audit_log.py  keyword_store.py  keywords.py  learning_automation.py  learning_intelligence.py  learning_review.py  lexicon_admin.py  management_audit.py  moderation.py  moderation_service.py  night_mode.py  onboarding.py  rule_engine.py  statistics.py  target_guard.py
bot/tasks/: admin_sync_task.py  learning_auto_task.py  mute_release_task.py
bot/utils/: permissions.py
data/: keywords.txt  博彩赌博.txt  成人内容.txt  诈骗广告.txt
docker/: nginx-webhook.conf
docs/: DEPLOY_DEBIAN.md  PROJECT_STRUCTURE.md
migrations/: env.py
migrations/versions/: 20260523_000001_init.py  20260523_000002_add_verification_created_at.py  (+1 more)
scripts/: setup_debian.sh  update_debian.sh
tests/: test_config_and_cache.py  test_deploy_smoke.py  test_learning.py  test_moderation.py  test_mvp_services.py  test_permissions.py
