[project]
name = "telegram-moderation-bot"
version = "0.1.0"
description = "Telegram group moderation bot with keyword, link, flood, repeat, length, username and adaptive keyword rules."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.0.1",
    "python-telegram-bot[job-queue]==21.6",
]
